--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,6 +7,11 @@
   font-weight: normal;
 }
 
+html {
+  overflow-y: hidden;
+  scrollbar-width: thin;
+}
+
 body {
   min-height: 100vh;
   line-height: 1.6;
@@ -18,4 +23,21 @@ body {
 a {
   color: inherit;
   text-decoration: inherit;
+}
+
+/* Scrollbar Styles */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
